--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,22 +29,22 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # 3: Caching Gradle Packages
-      - uses: actions/cache@v3
-        name: Cache Gradle for quicker builds
-        id: caching_gradle
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('**/buildSrc/**/*.kt') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      # 4: Grant execute permission for gradlew
+      # 3: Grant execute permission for gradlew
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
+      #4: Setup Gradle
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
 
       # 5: Build Gradle
       - name: Build with Gradle
         run: ./gradlew build
+
+      #6: Upload Artifact
+      - name: Uploading artifact to the build dir
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: Package
+          path: build/libs
