--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -54,6 +54,7 @@ ktorclientcore = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktorcio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktorclientserialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
 ktorclientauth = { module = "io.ktor:ktor-client-auth", version.ref = "ktor" }
+doubleRecieve = { module = "io.ktor:ktor-server-double-receive", version.ref = "ktor" }
 
 exposedcore = { module = "org.jetbrains.exposed:exposed-core", version.ref = "exposed" }
 exposeddao = { module = "org.jetbrains.exposed:exposed-dao", version.ref = "exposed" }
@@ -112,7 +113,8 @@ ktor = ['ktorcore',
     "ktorcio",
     "ktorclientserialization",
     "ktorclientauth",
-    "serializationJson"
+    "serializationJson",
+    "doubleRecieve"
 ]
 logging = ["logback",
     "kotlinLogging"
