--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,13 +10,13 @@ ktor {
         secret = ${JWT_SECRET}
         validity_ms = "86400000" # 24h
         issuer = "io.adikmt"
-        audience = "realworld"
-        realm = "RealWorld Server"
+        audience = "reddit"
+        realm = "RedditClients Server"
       }
       database {
         driver = "com.mysql.cj.jdbc.Driver"
         driver = ${?DB_DRIVER}
-        url = "jdbc:mysql://localhost:3306/realworld"
+        url = "jdbc:mysql://localhost:3306/redditClone"
         url = ${?DB_URL}
         username = ${DB_USERNAME}
         pwd = ${DB_PWD}
